fix spacing of diff table

--- a/client/assets/styles/scss/forms/forms-table.scss
+++ b/client/assets/styles/scss/forms/forms-table.scss
@@ -40,6 +40,10 @@
   .tr-gap {
     background: rgba($blue,.05);
 
+    &:last-child .cell-line {
+      border-radius: 0;
+    }
+
     .cell-line {
       background: rgba($blue,.05);
     }
